Added Data Science Introduction

--- a/deep_learning_basics/deep_learning_beginner.ipynb
+++ b/deep_learning_basics/deep_learning_beginner.ipynb
@@ -2207,6 +2207,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## L Layer Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With more layers a neural network can detect more features and can learn more and more complex functions. For example, first hidden layer learns the edges or basic shapes, when number of layers increase, it start to learn convex shapes or characterstic features of fingers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will work with 2 hidden layers with 8 and 4 nodes, since when the number of hidden layers and nodes increase, the time required also increases, as an activation function we will use relu for first and second hidden layer and sigmoid for the output layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reshape\n",
+    "x_train, x_test, y_train, y_test = x_train.T, x_test.T, y_train.T, y_test.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Keras\n",
+    "\n",
+    "We will be using Keras library for this, the key inputs are:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
